<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    app:cardElevation="4dp"
    android:layout_marginTop="5dp"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:padding="10dp">

        <!-- Left TextView -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:layout_marginEnd="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/red"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/date"
            android:text="@string/date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/weekRange"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintVertical_chainStyle="packed"/>

        <!-- Right TextView -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:padding="10dp"
            android:textSize="14sp"
            android:textColor="@android:color/white"
            android:background="@color/red"
            android:textAlignment="center"
            android:textStyle="italic"
            android:id="@+id/weekRange"
            android:text="@string/date"
            app:layout_constraintStart_toEndOf="@+id/date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <!-- Top Guideline for aligning the ImageViews -->
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/topGuideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="50dp"/>

        <!-- First ImageView (Left) -->
        <ImageView
            android:layout_height="36dp"
            android:layout_width="36dp"
            android:contentDescription="@string/share_today"
            android:src="@drawable/share_today"
            android:id="@+id/day_share"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintStart_toStartOf="parent"/>

        <!-- Second ImageView (Right) -->
        <ImageView
            android:id="@+id/ic_tts"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="10dp"
            android:contentDescription="Sikiza Lesoni ya leo"
            android:src="@drawable/ic_tts"
            app:layout_constraintTop_toBottomOf="@id/topGuideline"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- Title TextView -->
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textColor="?android:textColorPrimary"
            android:textStyle="bold"
            android:id="@+id/day_title"
            android:text="@string/today_s_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/date"/>

        <!-- Saturday Image -->
        <ImageView
            android:id="@+id/saturday_image"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:contentDescription="SaturdayImage"
            app:layout_constraintTop_toBottomOf="@+id/day_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <!-- LinearLayout for dynamic TextViews and EditTexts -->
        <LinearLayout
            android:id="@+id/paragraph_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/saturday_image"/>
        
            <!-- Button for "Maongezi ya Mwalimu" -->
        <ToggleButton
            android:id="@+id/maongezi_mwalimu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_toggle_corners"
            android:textOff="Mwongozo wa Waalimu"
            android:textOn="Rudi kwa lesoni"
            android:layout_marginTop="16dp"
            android:padding="5px"
            app:layout_constraintTop_toBottomOf="@+id/paragraph_container"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>