<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout 
        android:layout_width="match_parent" 
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/action_bar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="4dp"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

                <Spinner
                    android:id="@+id/quarterWeeks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?android:attr/windowBackground"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weekTitle" />

                <TextView
                    android:id="@+id/weekTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/day_title"
                    android:textStyle="bold"
                    android:background="@color/red"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/action_bar" />

                <ImageView
                    android:id="@+id/quarter_image"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:contentDescription="@string/illustration_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/lesson"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quarterWeeks"
                    android:layout_marginTop="8dp"/>
                
                <TextView
                    android:id="@+id/utangulizi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Utangulizi"
                    android:textStyle="bold"
                    android:textSize="5pt"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/quarter_image"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/verses"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/verses"
                    android:maxLines="3"
                    android:textAlignment="center"
                    android:textColor="?android:attr/textColorPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/utangulizi"
                    android:layout_marginTop="0dp"/>
                
                <Button
                        android:id="@+id/btnToggle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="soma zaidi"
                        app:layout_constraintTop_toBottomOf="@id/verses"
                        app:layout_constraintEnd_toEndOf="@id/verses"
                        app:layout_constraintStart_toStartOf="@id/verses"/>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/wk_day"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnToggle"
                    android:layout_marginTop="8dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/navigation_drawer"/>
</androidx.drawerlayout.widget.DrawerLayout>